[tool.poetry]
name = "calculadora-de-cerveja"
version = "0.1.0"
description = ""
authors = ["Caio Augusto <caioaugusto.fs@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_de_cerveja"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
