[tool.poetry]
name = "calculadora-de-cerveja"
version = "0.1.0"
description = ""
authors = ["Caio Augusto <caioaugusto.fs@gmail.com>"]
readme = "README.md"
packages = [{include = "calculadora_de_cerveja"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
